# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moshup"
version = "0.1.0"
description = "Simple CLI wrapper for mosh connections."
readme = "README.md"
authors = [{ name = "George White", email = "stonehippo@gmail.com" }]
dependencies = [
    "click >= 8.1.8",
]

[project.scripts]
moshup = "moshup.__main__:cli"